--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "prisma:generate": "prisma generate",
+    "prisma:db:push": "prisma db push",
+    "build": "npm run prisma:generate && npm run prisma:db:push && next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
@@ -15,7 +17,9 @@
     "react-dom": "^18",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@slack/web-api": "^7.0.3",
+    "@prisma/client": "^5.20.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,6 +31,7 @@
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^5.20.0"
   }
 }
